:wrench: Fix some alignment issues

--- a/resources/gui/css/bookmark_editor.css
+++ b/resources/gui/css/bookmark_editor.css
@@ -1,7 +1,3 @@
 #bookmark-editor {
   width: 500px;
 }
-
-#bookmark-editor .window-content {
-  padding: 10px 0;
-}
